deploy/k8s/api-deployment.yaml
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: __DEPLOYMENT_NAMESPACE__
  labels:
    name: api
    environment: __DEPLOYMENT_NAMESPACE__
    app: __APP_NAME__
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3000":"my-backendconfig"}}'
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
---
#########################################################
# API Gateway service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: __DEPLOYMENT_NAMESPACE__
  labels:
    name: api
    environment: __DEPLOYMENT_NAMESPACE__
    app: __APP_NAME__
spec:
  selector:
    matchLabels:
      app: api
  replicas: __API_DEPLOYMENT_REPLICA__
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: gcr.io/__PROJECT_ID__/__PROJECT_IMAGE__
          resources:
            limits:
              cpu: __API_CPU_LIMT__
              memory: __API_RAM_LIMT__
            requests:
              cpu: __API_CPU_REQUEST__
              memory: __API_RAM_REQUEST__
---
