deploy/k8s/k8s.yaml
#########################################################
# ingress
#########################################################
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "api-ingress"
  namespace: __DEPLOYMENT_NAMESPACE__
  labels:
    name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "__STATIC_IP_NAME__"
    networking.gke.io/managed-certificates: "__CERTIFICATE_MANAGER_NAME__"
    networking.gke.io/v1beta1.FrontendConfig: "frontendconfig"
spec:
  rules:
    - host: __PROJECT_URL__
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3000
---
